# dep-tree

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  schema.json
.github/: semver.sh
.github/workflows/: release.yml  test-tag.yml
cmd/: check.go  config.go  entropy.go  explain.go  render.go  root.go  root_test.go  tree.go
cmd/.root_test/: .dep-tree.yml  .txt  check.txt  explain .root_test__.py .____deps.py foo.bar.txt  explain .root_test__.py .____deps.py.txt  explain .root_test__.py.txt  help.txt  main.py  render random.py.txt  render random.rs.txt  tree .root_test_main.py __json __config .root_test_.dep_tree.yml.txt  tree .root_test_main.py __json __config .root_test_.dep_tree.yml_bad_path.txt  tree .root_test_main.py __json __exclude .root_test__.py.txt  tree .root_test_main.py __json __exclude .root_test_d_.py.txt  tree random.js.txt  tree random.pdf.txt  tree random.py.txt
docs/: IMPLEMENTING_NEW_LANGUAGES.md
internal/board/: block.go  board.go  board_test.go  connector.go
internal/check/: check.go  check_test.go  config.go  config_test.go
internal/config/: check.go  check_test.go  config.go  config_test.go  match.go  match_test.go  sample-config.yml
internal/dart/: language.go  parser.go  resolve.go
internal/dep_tree/: dep_tree.go  deps.go  deps_test.go  level.go  level_test.go  load.go  (+10 more)
internal/rust/.cargo_toml_test/normal/: Cargo.toml
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tygo.yaml  vite.config.ts
(+373 files in other folders)
