[package]
name = "foo"
version = "0.2.0"
edition = "2021"

[dependencies]
bar = { path = "../bar", version = "0.1.0" }
baz = { path = "../baz" }
mod1 = { version = "0.7.0" }
mod2 = "0.14.1"
mod3 = "0.10.0"

[dev-dependencies]
foo = { path = "../foo", version = "0.1.0" }
mod4 = "0.14.1"
mod5 = "0.10.0"

